# ros2_ws

./: .gitignore  README.md
PointCloudBags/backpack_scan/: backpack_cut.ply  backpack_processed.ply  extract_pointcloud.py  metadata.yaml  process_backpack.py
PointCloudBags/rosbag2_2025_10_22-16_09_08/: extract_pointcloud.py  metadata.yaml
PointCloudBags/test_sample/: backpack_processed.ply  extract_pointcloud.py  metadata.yaml  process_backpack.py  scan_extracted.pcd  test_scan_cut.ply
daily_stu_conclusion/: realsense_pointcloud_workflow_2025-10-22.md
src/base_motor_control/: package.xml  setup.py
src/base_motor_control/base_motor_control/: motor_node.py
src/mg6010_can_control/: CMakeLists.txt  package.xml  plugin_description.xml
src/mg6010_can_control/config/: controllers.yaml  ros2_control.yaml
src/mg6010_can_control/include/mg6010_can_control/: mg6010_hardware.hpp
src/mg6010_can_control/launch/: bringup.launch.py
src/mg6010_can_control/src/: mg6010_hardware.cpp
src/my_first_turtlesim_cpp/: CMakeLists.txt  package.xml
src/my_first_turtlesim_cpp/src/: myFirstTurtlesimCpp.cpp
src/two_turtle_circle/: CMakeLists.txt  package.xml
src/two_turtle_circle/src/: twoTurtleCircle.cpp
