<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_first_turtlesim_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="larry@todo.todo">larry</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 新增：运行和编译所需的依赖包 -->
  <depend>rclcpp</depend>                <!-- C++ 客户端库 -->
  <depend>geometry_msgs</depend>         <!-- 几何消息类型（如 Twist） -->
  <depend>turtlesim</depend>             <!--  turtlesim 仿真器依赖（如果用到） -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
